# FlaskFAQ

./: .flaskenv  .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  settings.toml
flask_faq/: __init__.py  admin.py  auth.py  cli.py  extensions.py  models.py
flask_faq/blueprints/: main.py
flask_faq/static/: style.css
flask_faq/templates/: base.html  index.html  login.html
flask_faq/templates/admin/: custom_master.html
