[project]
name = "flaskfaq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dynaconf>=3.2.12",
    "flask>=3.1.2",
    "flask-admin>=2.0.2",
    "flask-bootstrap>=3.3.7.1",
    "flask-simplelogin>=0.2.0",
    "flask-sqlalchemy>=3.1.1",
    "python-dotenv>=1.2.1",
]
